# experiments_with_conv

./: README.md
accum_dot/: Cargo.toml
accum_dot/benches/: accconv.rs  accdot.rs  onegate.rs
accum_dot/src/: acc_conv.rs  lib.rs  main.rs  one_gate_cnn.rs
