[package]
name = "accum_dot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2023_02_02"}
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.1" }
rand = "0.8"
ark-std = "0.4.0"

[dev-dependencies]
criterion = {version = "0.3",  features = ["html_reports"]}

[[bench]]
name = "accdot"
harness = false